--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,14 @@ body {
   background: white;
 }
 .page-name {
+  display: inline-block;
   color: #ff4500;
   font-size: 35px;
+}
+
+.dashboard-heading {
+  display: inline-block;
+  margin-left: 20px;
 }
 
 .form-signin {
