--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -12,8 +12,16 @@ body {
 
 .form-signin {
   margin-top: 50px;
-  margin-bottom: 50px;
   border-radius: 10px;
   padding: 30px;
   box-shadow: 0px 0px 10px 0px;
+}
+
+.form-signin .form-signin-heading .form-signin .checkbox {
+  margin-bottom: 30px;
+}
+
+.form-signin input[type="text"],
+.form-sigin input[type="password"] {
+  margin-bottom: 20px;
 }
